norcina-pyraminx/src/snapshots/norcina_pyraminx__tests__Move: B  (tip=false).snap
---
source: norcina-pyraminx/src/lib.rs
expression: "Pyraminx::SOLVED.mov([mov])"
---
[38;2;23;125;235m██[39m[38;2;23;125;235m██[39m[38;2;23;125;235m██[39m[38;2;214;59;39m██[39m[38;2;214;59;39m██[39m  [38;2;39;214;95m██[39m  [38;2;23;125;235m██[39m[38;2;23;125;235m██[39m[38;2;235;231;23m██[39m[38;2;235;231;23m██[39m[38;2;235;231;23m██[39m
  [38;2;23;125;235m██[39m[38;2;214;59;39m██[39m[38;2;214;59;39m██[39m  [38;2;39;214;95m██[39m[38;2;39;214;95m██[39m[38;2;39;214;95m██[39m  [38;2;23;125;235m██[39m[38;2;23;125;235m██[39m[38;2;235;231;23m██[39m
    [38;2;214;59;39m██[39m  [38;2;39;214;95m██[39m[38;2;39;214;95m██[39m[38;2;39;214;95m██[39m[38;2;39;214;95m██[39m[38;2;39;214;95m██[39m  [38;2;23;125;235m██[39m
        [38;2;235;231;23m██[39m[38;2;235;231;23m██[39m[38;2;235;231;23m██[39m[38;2;235;231;23m██[39m[38;2;235;231;23m██[39m
          [38;2;214;59;39m██[39m[38;2;214;59;39m██[39m[38;2;214;59;39m██[39m
            [38;2;214;59;39m██[39m
